# tdx-identity

./: .gitignore  Cargo.toml  README.md
identity_svc/: Cargo.toml
identity_svc/src/: encryption.rs  error.rs  handlers.rs  main.rs  ssh.rs  state.rs  storage.rs  tdx.rs  validation.rs  workload.rs
registry/: Cargo.toml
registry/src/: error.rs  handlers.rs  main.rs  state.rs  tdx.rs  validation.rs
shared/: Cargo.toml
shared/src/: encrypted_ppid.rs  lib.rs  report_data.rs  sig_validation.rs  types.rs
tests/: conftest.py  requirements.txt  test_basic.py  test_edge_cases.py  test_errors.py  test_workload.py
tests/utils/: api_client.py  server_manager.py  ssh.py  workload.py
tools/: proc_root.py  tdx-validator.go  upload.sh
