[workspace]
members = [
    "registry",
    "identity_svc",
    "shared",
]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.7.7", features = ["macros"] }
configfs-tsm = "0.0.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
hex = "0.4.3"
lazy_static = "1.5.0"
rand = "0.8.5"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sha2 = "0.10.8"
tdx-quote = "0.0.1"
thiserror = "1.0.66"
tokio = { version = "1.41.0", features = ["full"] }